# memory_loader

./: CMakeLists.txt  CreateRemoteThread.cpp  Impulse-Loader.vcxproj  Impulse-Loader.vcxproj.filters  LICENSE  Load.cpp  Main.cpp  NtCreateThreadEx.cpp  RemoteOps.cpp  Ring0.cpp  Security.cpp  Security.h  color.hpp  lazyimports.h  memory_injection.h  vlnintel.sys  xorstr.h
